template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: ElastiCache and DynamoDB example

# Run: sam deploy -t template.yaml --stack-name sam-app-red-dyn  --config-file samconfig.toml

Parameters:
  ProjectName:
    Type: String
    Default: Redis-Listener-Sample

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  ElasticacheInstanceClass:
    Type: String
    Default: cache.t3.micro
  
  EC2KeyName:
    Type: String
    Default: aws # nmmashko-kp-two

Globals:
  Function:
    Runtime: nodejs14.x
    MemorySize: 1024
    Timeout: 15
    Tags:
      Project: !Ref ProjectName

Mappings:
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    Private1:
      CIDR: '10.0.0.0/24'
    Private2:
      CIDR: '10.0.1.0/24'
    Lambda1:
      CIDR: '10.0.2.0/24'
    Lambda2:
      CIDR: '10.0.3.0/24'
    Public1:
      CIDR: '10.0.4.0/24'

Resources:
  ## EC2 Instance ##
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.small
      ImageId: !Ref LatestAmiId
      KeyName: !Ref EC2KeyName
      Monitoring: true
      SecurityGroupIds: 
        - !Ref EC2InstanceSecurityGroup
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-Instance"    

  ## ElastiCache ##
  RedisClusterParameterGroup:
    Type: 'AWS::ElastiCache::ParameterGroup'
    Properties:
      Description: !Sub "${ProjectName}-parameter-group"
      CacheParameterGroupFamily: redis5.0
      Properties:
        notify-keyspace-events: "EA"

  RedisCluster:
    Type: AWS::ElastiCache::ReplicationGroup
    Properties:
      AutoMinorVersionUpgrade: true
      ReplicationGroupId: !Sub "${ProjectName}-cluster"
      # enable Cluster Mode
      CacheParameterGroupName: !Ref RedisClusterParameterGroup
      CacheNodeType: cache.t3.micro
      CacheSubnetGroupName:  !Ref RedisSubnetGroup
      Engine: redis
      EngineVersion: 5.0.6
      NumNodeGroups: 1
      Port: 6379
      ReplicasPerNodeGroup: 1
      ReplicationGroupDescription: !Sub "${ProjectName}-Redis-Replication-Group"
      SecurityGroupIds:
        - !Ref RedisSecurityGroup
      Tags:
        - Key: Project
          Value: !Ref ProjectName

  RedisSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Redis subnet group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable Redis access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref EC2InstanceSecurityGroup
      Tags:
        - Key: Project
          Value: !Ref ProjectName

  ## VPC ##
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-vpc"
        - Key: Project
          Value: !Ref ProjectName

  EC2InstanceInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: name
        Value: !Sub "${ProjectName}-ig"
  
  EC2InstanceAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: EC2InstanceInternetGateway
  
  EC2InstanceRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-rt"
  
  EC2InstanceRouteTableRoute:
    Type: AWS::EC2::Route
    DependsOn: EC2InstanceAttachGateway
    Properties:
      RouteTableId:
        Ref: EC2InstanceRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: EC2InstanceInternetGateway
          
  # PublicSubnet1:
  #   Type: AWS::EC2::Subnet
  #   Properties: 
  #     AvailabilityZone:
  #       Fn::Select:
  #       - 0
  #       - Fn::GetAZs: !Ref AWS::Region      
  #     CidrBlock: !FindInMap ['SubnetConfig', 'Public1', 'CIDR']
  #     MapPublicIpOnLaunch: true
  #     Tags: 
  #       - Key: Name
  #         Value: !Sub "${ProjectName}-public-subnet-1"
  #       - Key: Project
  #         Value: !Ref ProjectName
  #     VpcId: !Ref VPC
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: !FindInMap ['SubnetConfig', 'Public1', 'CIDR']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref "AWS::StackName","public-subnet"]]
        - Key: Project
          Value: !Ref ProjectName

  # internetGateway:
  #   Type: AWS::EC2::InternetGateway
  #   Properties:
  #     Tags:
  #       - Key: Name
  #         Value: !Join ["-", [!Ref "AWS::StackName","gateway"]]
  # gatewayToInternet:
  #   Type: AWS::EC2::VPCGatewayAttachment
  #   Properties:
  #     VpcId: !Ref VPC
  #     InternetGatewayId: !Ref internetGateway
  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  publicRoute:
    Type: AWS::EC2::Route
    DependsOn: EC2InstanceAttachGateway
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref EC2InstanceInternetGateway



  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref EC2InstanceRouteTable
      SubnetId: !Ref PublicSubnet1

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref VPC
      CidrBlock:  !FindInMap ['SubnetConfig', 'Private1', 'CIDR']
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-1"
        - Key: Project
          Value: !Ref ProjectName

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 1
        - Fn::GetAZs: !Ref AWS::Region
      VpcId: !Ref VPC
      CidrBlock:  !FindInMap ['SubnetConfig', 'Private2', 'CIDR']
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-private-subnet-2"
        - Key: Project
          Value: !Ref ProjectName




  natGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: natPublicIP
    Properties:
      AllocationId: !GetAtt natPublicIP.AllocationId
      SubnetId: !Ref PublicSubnet1
  natPublicIP:
    Type: AWS::EC2::EIP
    DependsOn: VPC
    Properties:
      Domain: vpc
  privateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  privateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref privateRouteTable
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref privateRouteTable
  s3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal: "*"
          Action:
            - "s3:*"
          Resource:
            - "*"
      RouteTableIds:
        - !Ref privateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC
  dynamoDBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal: "*"
          Action:
            - "dynamodb:*"
          Resource:
            - "*"
      RouteTableIds:
        - !Ref privateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcId: !Ref VPC





  web3UpdatePricesTempFunction:
    Type: AWS::Serverless::Function 
    Properties:
      Timeout: 15
      CodeUri: web3-realtime-token-prices/dist
      Handler: index.web3UpdatePriceData
      FunctionName: web3UpdatePricesTemp
      Policies:
        - AmazonDynamoDBFullAccess
      #   - Statement:
      #     - Sid: AWSLambdaVPCAccessExecutionRole
      #       Effect: Allow
      #       Action:
      #         - logs:CreateLogGroup
      #         - logs:CreateLogStream
      #         - logs:PutLogEvents
      #         - ec2:CreateNetworkInterface
      #         - ec2:DescribeNetworkInterfaces
      #         - ec2:DeleteNetworkInterface
      #         - dynamodb:GetItem
      #         - dynamodb:Scan
      #         - dynamodb:Query
      #         - dynamodb:BatchGetItem
      #         - dynamodb:DescribeTable
      #       Resource: "*"
      # # VpcConfig:
      # #   # VpcId: !Ref pubPrivateVPC
      # #   SecurityGroupIds:
      # #     - !Ref: InstanceLamSecurityGroup
      # #     # - sg-0c340327ec79c5ee9
      # #   SubnetIds:
      # #     - !Ref PublicSubnet1
      # #     - !Ref PrivateSubnet1
      # #     - !Ref PrivateSubnet2
      # #     # - subnet-ea8c6da1
      # #     # - subnet-7d26301b
      # #     # - subnet-ca005390
      Tracing: Active # https://docs.aws.amazon.com/lambda/latest/dg/lambda-x-ray.html
      Environment: # More info about Env Vars: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#environment-object
        Variables:
          DYNAMO_TABLE_NAME: !Ref RedisDataTable






  RedisDataTable:
    Type: AWS::DynamoDB::Table
    Properties: 
      AttributeDefinitions: 
        - AttributeName: id
          AttributeType: S
      KeySchema: 
        - AttributeName: id
          KeyType: HASH
      ProvisionedThroughput: 
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5

  EC2InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: EC2 Security Group
      SecurityGroupIngress:
          - IpProtocol: tcp
            CidrIp: 0.0.0.0/0
            FromPort: 22
            ToPort: 22      
      Tags:
        - Key: Project
          Value: !Ref ProjectName    

Outputs:
  # Need to do the outputs
  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
  # Find out more about other implicit resources you can reference within SAM
  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
  EC2Instance:
    Description: "ElastiCache Instance URL"
    Value: !GetAtt EC2Instance.PublicDnsName
  RedisCluster:
    Description: "Redis Cluster Primary Endpoint"
    Value: !GetAtt RedisCluster.PrimaryEndPoint.Address
  web3UpdatePricesTempFunction:
    Description: "ARN of Lambda web3UpdatePricesTempFunction Function"
    Value: !GetAtt web3UpdatePricesTempFunction.Arn
  RedisDataTable:
    Description: "Name of the DynamoDB destination table"
    Value: !Ref RedisDataTable

  pubPrivateVPCID:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Join ["-", [!Ref "AWS::StackName","vpc"]]
  PublicSubnet1ID:
    Description: Public Subnet A ID
    Value: !Ref PublicSubnet1
    Export:
      Name: !Join ["-", [!Ref "AWS::StackName","public-subnet-a"]]
  PrivateSubnet1ID:
    Description: Private Subnet A ID
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Join ["-", [!Ref "AWS::StackName","private-subnet-a"]]
  PrivateSubnet2ID:
    Description: Private Subnet B ID
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Join ["-", [!Ref "AWS::StackName","private-subnet-b"]]
  privateVPCSecurityGroup:
    Description: Default security for Lambda VPC
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: !Join ["-", [!Ref "AWS::StackName","vpc-sg"]]
